# solana-websocket

./: .gitignore  README.md
pubkey-server/: readme.md  server.py
websocket-client/: Cargo.toml
websocket-client/src/: main.rs
websocket-plugin/: .gitignore  Cargo.toml  readme.md
websocket-plugin/src/: constants.rs  lib.rs  plugin.rs  refresh.rs  remote_communication.rs  simple_plugin.rs
websocket-server/: Cargo.toml
websocket-server/src/: main.rs
