[package]
name = "geyser"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solana-geyser-plugin-interface = { version = "1.14.0" }
solana-program = "=1.14.0"
solana-account-decoder = { version = "1.14.0" }
reqwest = "0.11"
serde_json = "1.0.100"
tokio = "1.29.1"
base64 = "0.21.2"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]